Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-23298

Section headers ignore list delegate size changes when "colliding"

    XMLWordPrintable

Details

    • baee77ef475056e045e2fa41f448a2703e2def07

    Description

      Run the attached qml
      Scroll down to, and click on, the name "Azzie" to expand the item
      Scroll the list up such that the B section header is directly underneath the A section header
      Click on the name "Babara" to expand it

      The B section header will slide behind the A section header - likely because the previous list item has collapsed. It would be favourable if the headers recognised this and stopped moving when the edges meet.

      Attachments

        For Gerrit Dashboard: QTBUG-23298
        # Subject Branch Project Status CR V

        Activity

          People

            martjone Martin Jones (closed Nokia identity) (Inactive)
            dajansen Damian Jansen (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes