Section headers ignore list delegate size changes when "colliding"

Make section header updates part of the layout process.

Task-number: QTBUG-23298
Change-Id: I4586bc58bc195fcc47f6db79346727eb6e3d3845
Reviewed-by: Bea Lam <bea.lam@nokia.com>